# strategy-with-bt

./: .env.example  .gitignore  README.md  pyproject.toml  setup-server.sh
.github/workflows/: daily-signals.yml
docs/: index.html  uncapped.html
docs/data/: daily_signals.csv  daily_signals_2026-03-25.csv  daily_signals_2026-03-26.csv  latest_date.json  portfolio_positions.csv  portfolio_positions_2026-03-25.csv  positions_state.json  uncapped_positions.csv  (+5 more)
reports/: AUTOMATION_GUIDE.md  FINAL_REPORT.md  aggressive_results.csv  daily_signals.csv  daily_signals_2026-03-26.csv  daily_signals_2026-03-27.csv  ensemble_results.csv  entropy_optimization.csv  entropy_optimization_best.csv  focused_results.csv  latest_date.json  leverage_sweep.csv  portfolio_positions.csv  portfolio_positions_2026-03-25.csv  portfolio_positions_2026-03-26.csv  portfolio_positions_2026-03-27.csv  positions_state.json  strategy_comparison.csv  strategy_entropy_regularized.md  strategy_garch_vol.md  strategy_inverse_vol_ensemble.md  strategy_math_foundations.md  uncapped_positions.csv  uncapped_positions_2026-03-25.csv  uncapped_positions_2026-03-26.csv  uncapped_positions_2026-03-27.csv  uncapped_signals.csv  uncapped_signals_2026-03-25.csv  uncapped_signals_2026-03-26.csv  uncapped_signals_2026-03-27.csv
src/: automate.py  main.py  optimize_entropy.py  position_manager.py  run_aggressive.py  run_daily.py  run_ensemble.py  run_ensemble_v2.py  run_focused.py  run_leverage_sweep.py  run_sp500.py  run_sp500_aggressive.py  scheduler.py  schwab_executor.py
tests/: test_strategies.py
(+51 files in other folders)
