[project]
name = "strategy-with-bt"
version = "0.1.0"
description = "Advanced quantitative trading strategies with rigorous backtesting"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "yfinance>=0.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "arch>=6.2",
    "hmmlearn>=0.3",
    "filterpy>=1.4",
    "tabulate>=0.9",
    "pyarrow>=15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
